# team-management-demo

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env  .env.example  Dockerfile  README.md  manage.py  pyproject.toml
backend/api/: models.py  serializers.py  tests.py
backend/api/migrations/: 0001_initial.py
backend/team_management/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: App.tsx  routes.ts
frontend/src/components/: AddTeamMember.tsx  AppRouter.tsx  EditTeamMember.tsx  Header.tsx  Layout.tsx  TeamMemberForm.tsx  TeamMemberList.tsx
frontend/src/components/common/: BackLink.tsx  DeleteConfirmation.tsx  ErrorMessage.tsx  LoadingSpinner.tsx
frontend/src/hooks/: useCreateTeamMember.ts  useTeamMember.ts  useTeamMembers.ts
frontend/src/services/: api.ts
frontend/src/utils/: toast.ts
